--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "universal-cookie": "^7.2.2",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.3",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
