--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
   "dependencies": {
     "@vueuse/core": "^11.3.0",
     "apexcharts": "^3.54.1",
-    "axios": "^1.9.0",
-    "element-plus": "^2.10.1",
+    "axios": "^1.10.0",
+    "element-plus": "^2.10.2",
     "highlight.js": "^11.11.1",
     "pinia": "^3.0.3",
     "universal-cookie": "^7.2.2",
-    "vue": "^3.5.16",
-    "vue-i18n": "^11.1.5",
+    "vue": "^3.5.17",
+    "vue-i18n": "^11.1.7",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
+    "@eslint/js": "^9.29.0",
     "@iconify/vue": "^4.3.0",
     "@lottiefiles/dotlottie-web": "^0.38.2",
-    "@tailwindcss/vite": "^4.1.8",
-    "@types/node": "^22.15.30",
+    "@tailwindcss/vite": "^4.1.10",
+    "@types/node": "^22.15.33",
     "@vitejs/plugin-vue": "^5.2.4",
-    "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^15.15.0",
     "msw": "^2.10.2",
-    "sass": "^1.89.1",
-    "tailwindcss": "^4.1.8",
+    "sass": "^1.89.2",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "unplugin-vue-components": "^0.27.5",
-    "vite": "^6.3.5",
-    "vite-plugin-checker": "^0.8.0",
+    "vite": "^7.0.0",
+    "vite-plugin-checker": "^0.9.3",
     "vue-tsc": "^2.2.10",
     "vuedraggable": "^4.1.0"
   },
