--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,49 +1,11 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "esnext",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "moduleDetection": "force",
-    "module": "preserve",
-    "noEmit": true,
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
-    ],
-    "types": [
-      "element-plus/global",
-      "vite/client",
-      "node"
-    ],
-    "strict": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "noImplicitOverride": true,
-    "noUncheckedIndexedAccess": true,
-    "baseUrl": ".",
-    "paths": {
-      "src": ["./src"],
-      "src/*": ["./src/*"],
-      "components": ["./src/components"],
-      "components/*": ["./src/components/*"],
-      "layouts": ["./src/layouts"],
-      "layouts/*": ["./src/layouts/*"],
-      "pages": ["./src/pages"],
-      "pages/*": ["./src/pages/*"],
-      "assets": ["./src/assets"],
-      "assets/*": ["./src/assets/*"],
-      "boot": ["./src/boot" ],
-      "boot/*": ["./src/boot/*" ],
-      "stores": ["./src/stores"],
-      "stores/*": ["./src/stores/*"],
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
     }
-  },
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": [
-    "./../dist",
-    "./../node_modules"
   ]
 }
