--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
-    "apexcharts": "^3.54.1",
+    "apexcharts": "^5.2.0",
     "axios": "^1.10.0",
     "highlight.js": "^11.11.1",
-    "pinia": "^2.3.1",
+    "pinia": "^3.0.3",
     "quasar": "^2.18.1",
     "vue": "^3.5.17",
-    "vue-i18n": "^11.1.7",
+    "vue-i18n": "^11.1.9",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.0",
-    "@lottiefiles/dotlottie-web": "^0.38.2",
+    "@eslint/js": "^9.30.1",
+    "@lottiefiles/dotlottie-web": "^0.47.0",
     "@quasar/app-vite": "^2.2.1",
     "@types/node": "^22.15.34",
-    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.30.0",
-    "eslint-plugin-vue": "^9.33.0",
-    "globals": "^15.15.0",
-    "msw": "^2.10.2",
-    "typescript": "~5.6.3",
-    "vite-plugin-checker": "^0.9.3",
-    "vue-tsc": "^2.2.10"
+    "eslint": "^9.30.1",
+    "eslint-plugin-vue": "^10.3.0",
+    "globals": "^16.3.0",
+    "msw": "^2.10.3",
+    "typescript": "~5.8.3",
+    "vite-plugin-checker": "^0.10.0",
+    "vue-tsc": "^3.0.1"
   },
   "msw": {
     "workerDirectory": [
-      "src/mocks"
+      "public"
     ]
   },
   "packageManager": "pnpm@10.8.0"
