--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leafage-ms",
+  "name": "leafage-ui",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -25,7 +25,6 @@
     "@vitejs/plugin-react-swc": "^4.0.1",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "msw": "^2.11.1",
     "tailwindcss": "^4.1.13",
