--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "primeicons": "^7.0.0",
-    "primereact": "^10.9.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2"
@@ -25,12 +27,12 @@
     "@vitejs/plugin-react-swc": "^4.0.1",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "msw": "^2.11.1",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "vite": "^7.1.4"
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5"
   },
   "packageManager": "pnpm@9.15.0",
   "msw": {
