代码预览添加

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "leafage-ms",
+  "name": "leafage",
   "version": "0.0.1",
   "description": "A system based on RBAC.",
-  "productName": "leafage-ms",
+  "productName": "leafage",
   "author": "wq.li <little3201@163.com>",
   "private": true,
   "type": "module",
@@ -27,7 +27,7 @@
     "@eslint/js": "^9.35.0",
     "@lottiefiles/dotlottie-web": "^0.47.0",
     "@quasar/app-vite": "^2.4.0",
-    "@types/node": "^22.18.4",
+    "@types/node": "^22.18.5",
     "@vue/eslint-config-typescript": "^14.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
