修改fullname，替换为name

--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,5 @@
-# 环境
 NODE_ENV=development
-
-# 接口前缀
 VITE_BASE_API=/api
-
-# 标题
 VITE_APP_TITLE='Project Management'
-
-# pkce
-VITE_CLIENT_ID=pkce-client
+VITE_BACKEND_URL=http://127.0.0.1:8760
+VITE_APP_CDN_URL=https://cdn.leafage.top
