--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,4 @@
-# 接口前缀
 VITE_BASE_API=/api
-
-# 标题
 VITE_APP_TITLE='Project Management'
-
-# pkce
-VITE_CLIENT_ID=pkce-client
+VITE_BACKEND_URL=https://leafage.top
+VITE_APP_CDN_URL=https://cdn.leafage.top
