--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint -c ./eslint.config.js \"./src/**/*.{js,mjs,cjs,ts,vue}\"",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky"
   },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
@@ -37,6 +39,8 @@
     "eslint": "^9.38.0",
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "msw": "^2.11.6",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.16",
