--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_BASE_API=/api
 VITE_APP_TITLE='Project Management'
-VITE_BACKEND_URL=https://leafage.top
+VITE_BASE_URL=https://leafage.top
 VITE_APP_CDN_URL=https://cdn.leafage.top
