--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "test"],
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["commitlint.config.ts", "src/**/*", "src/**/*.ts", "src/**/*.vue"],
+  "exclude": ["test/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
