--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,7 @@
 {
   "include": [
     "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*"
+    "vitest.config.*"
   ],
   "compilerOptions": {
     "composite": true,
