--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "lint:lint-staged": "lint-staged",
     "prepare": "husky"
   },
+  "lint-staged": {
+     "*.{js,mjs,ts,mts,vue}": [
+      "eslint --fix --max-warnings=0"
+    ]
+  },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "@vueuse/core": "^13.9.0",
