--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["commitlint.config.ts", "src/**/*", "src/**/*.ts", "src/**/*.vue"],
-  "exclude": ["test/**/__tests__/*"],
+  "include": ["src/**/*", "src/**/*.ts", "src/**/*.vue"],
+  "exclude": ["test/**/__tests__/*", "node_modules", "dist", "coverage"],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
