--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "lint:lint-staged": "lint-staged",
-    "prepare": "husky",
-    "commit": "cz"
+    "prepare": "husky"
   },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
@@ -37,6 +36,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^22.19.1",
     "@vitejs/plugin-vue": "^6.0.2",
+    "@vitest/coverage-v8": "3.2.4",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.1",
