--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,15 @@
 {
   "recommendations": [
-    "Vue.volar",
     "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
-    "lokalise.i18n-ally",
-    "bradlc.vscode-tailwindcss",
-    "streetsidesoftware.code-spell-checker"
+    "vue.volar",
+    "wayou.vscode-todo-highlight"
+  ],
+  "unwantedRecommendations": [
+    "octref.vetur",
+    "hookyqr.beautify",
+    "dbaeumer.jshint",
+    "ms-vscode.vscode-typescript-tslint-plugin"
   ]
 }
