build: add husk, lint-staged, commitlint; refactor: edit function with async/await

--- a/package.json
+++ b/package.json
@@ -7,36 +7,44 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "eslint -c ./eslint.config.js './src*/**/*.{ts,js,cjs,mjs,vue}'",
-    "test": "echo \"No test specified\" && exit 0",
+    "lint": "eslint -c ./eslint.config.js ./src*/**/*.{js,mjs,cjs,ts,mts,vue}",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky"
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
-    "apexcharts": "^5.3.5",
-    "axios": "^1.12.2",
+    "apexcharts": "^5.3.6",
+    "axios": "^1.13.2",
     "highlight.js": "^11.11.1",
-    "pinia": "^3.0.3",
-    "quasar": "^2.18.5",
-    "vue": "^3.5.22",
-    "vue-i18n": "^11.1.12",
+    "pinia": "^3.0.4",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.25",
+    "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@lottiefiles/dotlottie-web": "^0.47.0",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.39.1",
     "@quasar/app-vite": "^2.4.0",
-    "@types/node": "^22.18.12",
+    "@types/node": "^22.19.1",
+    "@vitest/coverage-v8": "^4.0.15",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.38.0",
-    "eslint-plugin-vue": "^10.5.1",
-    "globals": "^16.4.0",
-    "msw": "^2.11.6",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "msw": "^2.12.3",
     "typescript": "~5.8.3",
-    "vite-plugin-checker": "^0.10.3",
-    "vue-tsc": "^3.1.1"
+    "vite-plugin-checker": "^0.11.0",
+    "vitest": "^4.0.15",
+    "vue-tsc": "^3.1.5"
   },
   "msw": {
     "workerDirectory": [
