test: 移除vitest.config配置文件合并到vite.config

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
   "exclude": ["node_modules", "dist", "coverage"],
   "compilerOptions": {
     "composite": true,
-
+    "types": ["vitest/config"],
     "baseUrl": ".",
     "paths": {
       "src": ["./src"],
