--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["src/**/*", "src/**/*.ts", "src/**/*.vue", "test/utils.test.ts"],
+  "include": ["src/**/*", "src/**/*.ts", "src/**/*.vue", "components.d.ts", "test/utils.test.ts"],
   "exclude": ["node_modules", "dist", "coverage"],
   "compilerOptions": {
     "composite": true,
