--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
     "highlight.js": "^11.11.1",
     "pinia": "^3.0.4",
     "quasar": "^2.18.6",
-    "vue": "^3.5.25",
-    "vue-i18n": "^11.2.2",
-    "vue-router": "^4.6.3"
+    "vue": "^3.5.26",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@eslint/js": "^9.39.1",
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
+    "@eslint/js": "^9.39.2",
     "@quasar/app-vite": "^2.4.0",
-    "@types/node": "^22.19.1",
-    "@vitest/coverage-v8": "^4.0.15",
+    "@types/node": "^22.19.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "autoprefixer": "^10.4.22",
-    "eslint": "^9.39.1",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.6.2",
-    "globals": "^16.5.0",
+    "globals": "^17.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "msw": "^2.12.3",
-    "typescript": "~5.8.3",
-    "vite-plugin-checker": "^0.11.0",
-    "vitest": "^4.0.15",
-    "vue-tsc": "^3.1.5"
+    "msw": "^2.12.7",
+    "typescript": "^5.9.3",
+    "vite-plugin-checker": "^0.12.0",
+    "vitest": "^4.0.16",
+    "vue-tsc": "^3.2.2"
   },
   "msw": {
     "workerDirectory": [
