chore: 更新以来版本

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "types": ["vitest/config"],
+    "module": "ESNext",
     "baseUrl": ".",
     "paths": {
       "src": ["./src"],
